refactor: Major API simplification and scope reduction
🎯 Key Improvements:
- Remove obsolete API wrapper artifacts (self.credentials, self._client)
- Add DRY constants module (enote.DEFAULT_ENEX_PATH)
- Simplify constructor: Corpus() uses default path automatically
- Rename get_all_notes() → read_notes() for clarity
- Remove get_note(id) - we're a file processor, not API client
- Eliminate redundant/misleading tests and fixtures

✨ Result: Clean, focused ENEX corpus extraction utility for GenAI!

Files changed:
- src/enote/constants.py: New DRY constants module
- src/enote/corpus.py: Simplified constructor, read_notes method, removed get_note
- src/enote/__init__.py: Export DEFAULT_ENEX_PATH constant
- tests/: Cleaned fixtures, removed write ops tests, updated method names
- README.md: Updated examples to show simplified API
- notebooks/: Updated to demonstrate new clean API

Co-authored-by: GitHub Copilot <copilot@github.com>

--- a/notebooks/test_enex_parsing.ipynb
+++ b/notebooks/test_enex_parsing.ipynb
@@ -5,14 +5,19 @@
    "id": "6d7fcb93",
    "metadata": {},
    "source": [
-    "# Test ENEX Parsing\n",
+    "# Test ENEX Corpus Extraction\n",
     "\n",
-    "Quick test to see if our Corpus class can read the real Evernote backup data."
+    "Quick test of our **read-only ENEX corpus extractor** using the simplified API from today's refactoring.\n",
+    "\n",
+    "This demonstrates:\n",
+    "- Simplified `Corpus()` initialization (uses default ENEX path)\n",
+    "- New `read_notes()` method (renamed from `get_all_notes`)\n",
+    "- Clean, focused read-only functionality"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "56d38fda",
    "metadata": {},
    "outputs": [],
@@ -30,6 +35,45 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "287b4338",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🎯 Today's API improvements:\n",
+      "Default ENEX path: ~/tmp/evernote_backup\n",
+      "Corpus with default path: enote.Corpus()\n",
+      "Corpus with custom path: enote.Corpus({'enex_path': '/custom/path'})\n",
+      "\n",
+      "Default path: ~/tmp/evernote_backup\n",
+      "Explicit path: ~/tmp/evernote_backup\n",
+      "Paths match: True\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show off today's improvements: DRY constants and clean API\n",
+    "print(\"🎯 Today's API improvements:\")\n",
+    "print(f\"Default ENEX path: {enote.DEFAULT_ENEX_PATH}\")\n",
+    "print(f\"Corpus with default path: enote.Corpus()\")\n",
+    "print(f\"Corpus with custom path: enote.Corpus({{'enex_path': '/custom/path'}})\")\n",
+    "print()\n",
+    "\n",
+    "# Test the default path behavior\n",
+    "corpus_default = enote.Corpus()\n",
+    "corpus_explicit = enote.Corpus({\"enex_path\": enote.DEFAULT_ENEX_PATH})\n",
+    "print(f\"Default path: {corpus_default.enex_path}\")\n",
+    "print(f\"Explicit path: {corpus_explicit.enex_path}\")\n",
+    "print(f\"Paths match: {corpus_default.enex_path == corpus_explicit.enex_path}\")\n",
+    "print(\"-\" * 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "00b8cd7c",
    "metadata": {},
    "outputs": [
@@ -51,12 +95,12 @@
     }
    ],
    "source": [
-    "# Create corpus with path to your ENEX backup\n",
-    "corpus = enote.Corpus({\"enex_path\": \"~/tmp/evernote_backup\"})\n",
+    "# Create corpus using default ENEX path (much simpler now!)\n",
+    "corpus = enote.Corpus()\n",
     "\n",
-    "# Try to read just 3 notes to test\n",
+    "# Try to read just 3 notes to test using new read_notes method\n",
     "print(\"Reading 3 notes from ENEX files...\")\n",
-    "notes = corpus.get_all_notes(max_notes=3)\n",
+    "notes = corpus.read_notes(max_notes=3)\n",
     "\n",
     "print(f\"Successfully read {len(notes)} notes\")\n",
     "print()\n",
@@ -73,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "20fe45e6",
    "metadata": {},
    "outputs": [
@@ -104,6 +148,25 @@
     "print(f\"Created: {first_note['created']}\")\n",
     "print(f\"Updated: {first_note['updated']}\")\n",
     "print(f\"Body length: {len(first_note['body'])} characters\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "262bc896",
+   "metadata": {},
+   "source": [
+    "## ✅ Today's Refactoring Summary\n",
+    "\n",
+    "**Major improvements accomplished:**\n",
+    "\n",
+    "1. **Removed obsolete members**: Eliminated `self.credentials` and `self._client` - no more API wrapper confusion\n",
+    "2. **DRY constants**: Created `enote.DEFAULT_ENEX_PATH` - no more hardcoded paths scattered everywhere  \n",
+    "3. **Simplified API**: `Corpus()` with no args uses default path automatically\n",
+    "4. **Cleaner methods**: `get_all_notes()` → `read_notes()` (honest naming)\n",
+    "5. **Scope reduction**: Removed `get_note(id)` - we're not an API client, we're a file processor\n",
+    "6. **Test cleanup**: Removed redundant tests and obsolete write operation tests\n",
+    "\n",
+    "**Result**: Clean, focused ENEX corpus extraction utility for GenAI applications! 🎉"
    ]
   }
  ],
