docs: Add architectural concerns and consolidate TODOs
- Document key design questions: hardcoded vs dynamic extraction, note ID strategy, RAG architecture
- Consolidate all TODOs from requirements.txt into README for better organization
- Update README with new load() API and performance considerations
- Add debugging tutorial files and update notebook to use new member variable approach
- Remove obsolete evernote_api module and update tests for load() method
- Clean up requirements.txt to focus on dependencies only

--- a/notebooks/test_enex_parsing.ipynb
+++ b/notebooks/test_enex_parsing.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This demonstrates:\n",
     "- Simplified `Corpus()` initialization (uses default ENEX path)\n",
-    "- New `read_notes()` method (renamed from `get_all_notes`)\n",
+    "- New `load()` method with member variable storage\n",
     "- Clean, focused read-only functionality"
    ]
   },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "00b8cd7c",
    "metadata": {},
    "outputs": [
@@ -81,16 +81,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading 3 notes from ENEX files...\n",
-      "Successfully read 3 notes\n",
-      "\n",
-      "Note ID: note_000000\n",
-      "Title: Band Practice checklist\n",
-      "Tags: ['Checklists']\n",
-      "Body preview: \n",
-      "      <?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
-      "<!DOCTYPE en-note SYSTEM \"http://xml.evernote.com/pub/enml2.dtd\"><en-note><div><a href=\"evernote:///view/54151545/s314/53a6ba62-4bbc-49e8-...\n",
-      "--------------------------------------------------\n"
+      "Loading 3 notes from ENEX files...\n",
+      "Successfully loaded 3 notes into corpus\n"
      ]
     }
    ],
@@ -98,26 +90,16 @@
     "# Create corpus using default ENEX path (much simpler now!)\n",
     "corpus = enote.Corpus()\n",
     "\n",
-    "# Try to read just 3 notes to test using new read_notes method\n",
-    "print(\"Reading 3 notes from ENEX files...\")\n",
-    "notes = corpus.read_notes(max_notes=3)\n",
+    "# Load 3 notes using new load method that stores notes in the corpus\n",
+    "print(\"Loading 3 notes from ENEX files...\")\n",
+    "corpus.load(max_notes=3)\n",
     "\n",
-    "print(f\"Successfully read {len(notes)} notes\")\n",
-    "print()\n",
-    "\n",
-    "# Show the first note\n",
-    "for note_id, note_data in notes.items():\n",
-    "    print(f\"Note ID: {note_id}\")\n",
-    "    print(f\"Title: {note_data['title']}\")\n",
-    "    print(f\"Tags: {note_data['tags']}\")\n",
-    "    print(f\"Body preview: {note_data['body'][:200]}...\")\n",
-    "    print(\"-\" * 50)\n",
-    "    break  # Just show the first one"
+    "print(f\"Successfully loaded {len(corpus.notes)} notes into corpus\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "20fe45e6",
    "metadata": {},
    "outputs": [
@@ -140,11 +122,11 @@
    "source": [
     "# Let's look at all 3 notes briefly\n",
     "print(\"All notes summary:\")\n",
-    "for note_id, note_data in notes.items():\n",
+    "for note_id, note_data in corpus.notes.items():\n",
     "    print(f\"{note_id}: '{note_data['title']}' - Tags: {note_data['tags']}\")\n",
     "    \n",
     "print(f\"\\nFirst note details:\")\n",
-    "first_note = list(notes.values())[0]\n",
+    "first_note = list(corpus.notes.values())[0]\n",
     "print(f\"Created: {first_note['created']}\")\n",
     "print(f\"Updated: {first_note['updated']}\")\n",
     "print(f\"Body length: {len(first_note['body'])} characters\")"
@@ -162,11 +144,11 @@
     "1. **Removed obsolete members**: Eliminated `self.credentials` and `self._client` - no more API wrapper confusion\n",
     "2. **DRY constants**: Created `enote.DEFAULT_ENEX_PATH` - no more hardcoded paths scattered everywhere  \n",
     "3. **Simplified API**: `Corpus()` with no args uses default path automatically\n",
-    "4. **Cleaner methods**: `get_all_notes()` → `read_notes()` (honest naming)\n",
-    "5. **Scope reduction**: Removed `get_note(id)` - we're not an API client, we're a file processor\n",
+    "4. **Member variable storage**: `read_notes()` → `load()` with `corpus.notes` for future extensibility\n",
+    "5. **Scope reduction**: Removed `get_note(id)` and write operations - we're a file processor, not an API client\n",
     "6. **Test cleanup**: Removed redundant tests and obsolete write operation tests\n",
     "\n",
-    "**Result**: Clean, focused ENEX corpus extraction utility for GenAI applications! 🎉"
+    "**Result**: Clean, focused ENEX corpus extraction utility ready for future enhancements (dataclasses, SQLite, etc.)! 🎉"
    ]
   }
  ],
