--- a/notebooks/corpus_exploration.ipynb
+++ b/notebooks/corpus_exploration.ipynb
@@ -13,105 +13,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3bac20a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Import successful! Workspace settings are working.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test if workspace settings handle the import path\n",
-    "# If this fails, we'll need to add back the sys.path.insert() \n",
+    "# Fresh setup - clear all imports and restart\n",
+    "import sys\n",
+    "import os\n",
     "\n",
+    "# Print working directory to debug\n",
+    "print(f\"Current working directory: {os.getcwd()}\")\n",
+    "\n",
+    "# Clear any cached modules\n",
+    "modules_to_clear = [mod for mod in sys.modules if mod.startswith('enote')]\n",
+    "for mod in modules_to_clear:\n",
+    "    del sys.modules[mod]\n",
+    "\n",
+    "# Set correct path\n",
+    "project_root = os.path.abspath('..')\n",
+    "src_path = os.path.join(project_root, 'src')\n",
+    "print(f\"Adding to path: {src_path}\")\n",
+    "\n",
+    "if src_path not in sys.path:\n",
+    "    sys.path.insert(0, src_path)\n",
+    "\n",
+    "# Import fresh\n",
     "import enote\n",
-    "\n",
-    "print(\"✅ Import successful! Workspace settings are working.\")"
+    "print(f\"Imported enote from: {enote.__file__}\")\n",
+    "print(f\"Corpus module: {enote.corpus.__file__}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "061ee6ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Corpus attributes:\n",
-      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__firstlineno__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__static_attributes__', '__str__', '__subclasshook__', '__weakref__', '_clean_enml', '_generate_note_id', '_parse_note_element', 'enex_path', 'export_for_rag', 'get_backlinks', 'get_linked_notes', 'load', 'notes', 'query']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Explore the Corpus class\n",
+    "# Test corpus with fresh imports\n",
     "corpus = enote.Corpus()\n",
-    "print(\"Corpus attributes:\")\n",
-    "print(dir(corpus))"
+    "corpus.load(max_notes=3)\n",
+    "\n",
+    "print(f\"Loaded {len(corpus.notes)} notes\")\n",
+    "\n",
+    "# Test each note\n",
+    "for note_id, note_data in corpus.notes.items():\n",
+    "    print(f\"\\n=== {note_id} ===\")\n",
+    "    print(f\"Title: {note_data['title']}\")\n",
+    "    print(f\"Available keys: {list(note_data.keys())}\")\n",
+    "    \n",
+    "    # Check the tags field\n",
+    "    if 'tags' in note_data:\n",
+    "        tags = note_data['tags']\n",
+    "        print(f\"Tags: {tags} (type: {type(tags)}, length: {len(tags) if isinstance(tags, list) else 'not a list'})\")\n",
+    "        \n",
+    "        # Verify it's always a list\n",
+    "        if isinstance(tags, list):\n",
+    "            print(f\"✅ Tags is a list as expected\")\n",
+    "            if len(tags) > 0:\n",
+    "                print(f\"First tag: '{tags[0]}'\")\n",
+    "        else:\n",
+    "            print(f\"❌ Tags is not a list: {type(tags)}\")\n",
+    "    else:\n",
+    "        print(\"❌ No 'tags' field found\")\n",
+    "    \n",
+    "    # Check if old 'tag' field still exists\n",
+    "    if 'tag' in note_data:\n",
+    "        print(f\"❌ Old 'tag' field still present: {note_data['tag']}\")\n",
+    "    else:\n",
+    "        print(\"✅ Old 'tag' field properly removed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0c30b941",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method load in module enote.corpus:\n",
-      "\n",
-      "load(max_notes: Optional[int] = None) -> None method of enote.corpus.Corpus instance\n",
-      "    Load and parse notes from ENEX files into the corpus.\n",
-      "\n",
-      "    Args:\n",
-      "        max_notes: Optional limit on number of notes to load\n",
-      "                  (useful for testing with large datasets)\n",
-      "\n",
-      "    Note:\n",
-      "        Populates self.notes with the parsed note data.\n",
-      "        Each note is stored as: note_id -> {title, body, tags, metadata}\n",
-      "\n",
-      "    Example:\n",
-      "        {\n",
-      "            \"note_123\": {\n",
-      "                \"title\": \"Project Ideas\",\n",
-      "                \"body\": \"...\",\n",
-      "                \"tags\": [\"projects\", \"brainstorm\"],\n",
-      "                \"created\": datetime(...),\n",
-      "                \"updated\": datetime(...)\n",
-      "            }\n",
-      "        }\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Look at the documentation\n",
-    "help(corpus.load)"
+    "# Test RAG export with corrected tags field\n",
+    "import json\n",
+    "\n",
+    "rag_json = corpus.export_for_rag()\n",
+    "rag_data = json.loads(rag_json)\n",
+    "\n",
+    "print(f\"Exported {len(rag_data)} notes for RAG\")\n",
+    "print(f\"First note structure:\")\n",
+    "\n",
+    "first_note = rag_data[0]\n",
+    "print(json.dumps(first_note, indent=2))\n",
+    "\n",
+    "# Verify tags are always lists in export\n",
+    "print(f\"\\nTags verification:\")\n",
+    "for i, note in enumerate(rag_data):\n",
+    "    tags = note['metadata']['tags']\n",
+    "    if isinstance(tags, list):\n",
+    "        print(f\"Note {i+1}: ✅ tags is list with {len(tags)} items: {tags}\")\n",
+    "    else:\n",
+    "        print(f\"Note {i+1}: ❌ tags is not list: {type(tags)} = {tags}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0062302d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 2 notes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load some notes and explore\n",
     "corpus.load(max_notes=2)\n",
@@ -120,38 +128,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "85da4aea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== band_practice_checklist ===\n",
-      "Title: Band Practice checklist\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'tags'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m=== \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnote_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m ===\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTitle: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnote_data[\u001b[33m'\u001b[39m\u001b[33mtitle\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTags: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnote_data\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtags\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mKeys: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlist\u001b[39m(note_data.keys())\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mbreak\u001b[39;00m  \u001b[38;5;66;03m# Just show first one\u001b[39;00m\n",
-      "\u001b[31mKeyError\u001b[39m: 'tags'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Explore the notes structure\n",
+    "# Restart kernel to pick up latest code changes\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add src directory to Python path\n",
+    "sys.path.insert(0, os.path.abspath('../src'))\n",
+    "\n",
+    "import enote\n",
+    "\n",
+    "# Create corpus and load notes\n",
+    "corpus = enote.Corpus()\n",
+    "corpus.load(max_notes=10)\n",
+    "\n",
+    "print(f\"Loaded {len(corpus.notes)} notes\")\n",
+    "\n",
+    "# Test the tags field\n",
     "for note_id, note_data in corpus.notes.items():\n",
-    "    print(f\"\\n=== {note_id} ===\")\n",
+    "    print(f\"=== {note_id} ===\")\n",
     "    print(f\"Title: {note_data['title']}\")\n",
-    "    print(f\"Tags: {note_data['tags']}\")\n",
-    "    print(f\"Keys: {list(note_data.keys())}\")\n",
+    "    print(f\"Available keys: {list(note_data.keys())}\")\n",
+    "    \n",
+    "    # Check both possible tag fields\n",
+    "    if 'tags' in note_data:\n",
+    "        print(f\"Tags field: {note_data['tags']} (type: {type(note_data['tags'])})\")\n",
+    "    if 'tag' in note_data:\n",
+    "        print(f\"Tag field: {note_data['tag']} (type: {type(note_data['tag'])})\")\n",
+    "    \n",
     "    break  # Just show first one"
    ]
   },
@@ -345,6 +353,44 @@
     "\n",
     "# Uncomment to analyze after export:\n",
     "# analysis = analyze_rag_export()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca4bd19c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test that tags normalization fixes the bug\n",
+    "print(\"=== Testing Tags Normalization ===\")\n",
+    "\n",
+    "test_corpus = enote.Corpus()\n",
+    "test_corpus.load(max_notes=10)  # Load more notes to find edge cases\n",
+    "\n",
+    "notes_without_original_tags = 0\n",
+    "for note_id, note_data in test_corpus.notes.items():\n",
+    "    # Check that every note now has tags (even if empty)\n",
+    "    assert 'tags' in note_data, f\"Note {note_id} missing tags field!\"\n",
+    "    assert 'tag' in note_data, f\"Note {note_id} missing tag field!\"\n",
+    "    assert isinstance(note_data['tags'], list), f\"Note {note_id} tags not a list!\"\n",
+    "    \n",
+    "    # Count notes that originally had no tags\n",
+    "    if len(note_data['tags']) == 0:\n",
+    "        notes_without_original_tags += 1\n",
+    "\n",
+    "print(f\"✅ All {len(test_corpus.notes)} notes have normalized tags\")\n",
+    "print(f\"📊 Notes with no tags: {notes_without_original_tags}\")\n",
+    "print(f\"📊 Notes with tags: {len(test_corpus.notes) - notes_without_original_tags}\")\n",
+    "\n",
+    "# Show examples\n",
+    "print(f\"\\nTag examples:\")\n",
+    "for i, (note_id, note_data) in enumerate(test_corpus.notes.items()):\n",
+    "    if i >= 3:  # Just show first 3\n",
+    "        break\n",
+    "    tags = note_data['tags']\n",
+    "    title = note_data['title']\n",
+    "    print(f\"  {note_id}: {len(tags)} tags - {tags} ('{title}')\")"
    ]
   }
  ],
